# Webpage-Sidebar

./: .eslintrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  gulpfile.js  manifest.json  package-lock.json  package.json  tsconfig.json  tslint.json  vue.config.js  webpack.config.js
.cargo/: config.toml
backup/: launcher_back.js
extension/: manifest.json
extension/launcher/: launcher.css  launcher.html  storage.js
extension/sidebar/: sidebar.html
extension/src/: launcher.js  storage.js
launcher/: launcher.css  launcher.html  launcher.js  storage.js
old/: manifest.json
old/launcher/: launcher.html
sidebar/: sidebar.css  sidebar.html
src/: launcher.js  manifest.json  vue-shims.d.ts
src/background/: Cargo.toml  Trunk.toml  storage.ts
src/background/src/: browser.rs  lib.rs  main.rs  storage.rs
src/common/: Cargo.toml  crudStamp.ts  mappedList.ts  site.ts  siteState.ts  types.ts
src/common/src/: crud_stamp.rs  lib.rs
src/launcher/: Cargo.toml  Trunk.toml  launcher.html  launcher.ts  store.ts
src/launcher/components/: App.vue  Launcher.vue
src/launcher/src/: main.rs
src/sidebar/: Cargo.toml  Trunk.toml  sidebar.html
src/types/: vuex.d.ts
src/ws-webextensions/: Cargo.toml
src/ws-webextensions/src/: lib.rs
src_plain/: manifest.json
src_plain/background/: index.js
src_plain/launcher/: index.js
src_plain/sidebar/: index.js
src_workaround/: Readme.md  manifest.json
xtask/: Cargo.toml  Readme.md
xtask/src/: crate_info.rs  main.rs  workspace_helpers.rs
xtask/src/cmd/: build.rs  clean.rs  command_ext.rs  mod.rs
(+3 files in other folders)
