[package]
name = "background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
wasm-bindgen =  { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"